# GENAI_Python

RAG/: pyproject.toml
RAG/chai_code_docs/: __init__.py  answer_generator.py  config.py  data_loader.py  example_usage.py  main.py  query_improvement.py  rag_system.py  retrieval_methods.py  vector_store.py
RAG/llm-router/: config.py  main.py  query_router.py  rag_system.py
RAG/rag_files/: chai_code_docs.py  rag_1.py
chat-prompting/: chat.py  chat_2.py  chat_3_auto.py
chat-prompting/exercise/: ai-coding-agent-tool-calling.py  persona-chat.py  weather-agent.py
knowledge-graphs/: pyproject.toml
knowledge-graphs/mem/: mem.py
knowledge-graphs/story-retriver/: story-retriver.py
lang-graph/: pyproject.toml
lang-graph/checkpointing/: 01-chat-langgraph.py  02-langgraph-checkpoint.py
lang-graph/human-in-loop/: 01-chat-checkpointing.py  02-support-assistant.py
lang-graph/langgraph-tools/: 01-langgraph-chat.py  02-tools-basic.py  03-tools-usage.py  04-more-tools.py  05-todo-tools.py
lang-graph/learning/: 01-graph.py  02-graph-llm.py  03-code-graph-router.py
lang-graph/streaming/: 01-code-judge.py
projects/cursor-audio-agent/: main.py  pyproject.toml
projects/cursor-audio-agent/app/: config.py  graph.py  main.py  tools.py
