[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "qdrant-client>=1.15.0",
]
